# roam

./: Cargo.toml  README.md
src/: actions.rs  app.rs  bookmarks.rs  config.rs  fs.rs  main.rs  model.rs  preview.rs
src/ui/: entries.rs  footer.rs  header.rs  highlight.rs  icons.rs  image.rs  layout.rs  markdown.rs  mod.rs  modal.rs  pinned.rs  preview.rs  theme.rs
